# zen2fly

./: .gitignore  LICENSE  README.md  currency-format.json  pyproject.toml  zenmoney-export.ipynb
