[project]
name = "zen2fly"
version = "0.1.0"
description = "A tool for exporting Zenmoney accounts and transactions into Firefly III."
authors = [
    {name = "Ivan Skvortsov", email = "ivanskv2000@gmail.com"}
]
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.1.0",
    "requests>=2.31.0",
    "tqdm>=4.66.2",
    "zenmoney>=0.9",
    "python-dotenv>=1.0.1",
]

[tool.poetry.group.dev.dependencies]
pandas = "^2.2.1"
scikit-learn = "^1.4.1.post1"
matplotlib = "^3.8.3"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
